<resources>
    <string name="app_name">Depth Of Field Calculator</string>
    <string name="select_text">Select a lens to use:</string>
    <string name="name">Name</string>
    <string name="make">Make</string>
    <string name="cancel">Cancel</string>
    <string name="ex_2_8_for_f2_8">ex: 2.8 for F2.8</string>
    <string name="ex_cannon">ex: Canon</string>
    <string name="focal_length_mm">Focal Length (mm)</string>
    <string name="aperture">Aperture</string>
    <string name="save">Save</string>
    <string name="your_lens_list_is_currently_empty_to_add_more_lenses_click_the_add_button_on_the_bottom_right">Your lens list is currently Empty. To add more lenses, click the add button on the bottom right</string>
    <string name="invalid_aperture">Invalid Aperture</string>
</resources>